--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
       - run:
           name: Check spelling of ODK1 Documentation
           command: make odk1-spell-check
+      - run:
+          name: Compress images
+          command: pngquant odk1-build/_images/*.png --force --ext .png --verbose
       - store_artifacts:
           path: odk1-build
           destination: odk1-build
@@ -74,6 +77,9 @@ jobs:
       - run:
           name: Check spelling of ODK2 Documentation
           command: make odk2-spell-check
+      - run:
+          name: Compress images
+          command: pngquant odk2-build/_images/*.png --force --ext .png --verbose 
       - store_artifacts:
           path: odk2-build
           destination: odk2-build
