Update style check to just use -d option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,8 @@ jobs:
       - run:
           name: Style Guide Check
           command: |
-            paths=$(git diff origin/master... --name-only)
-            sudo python style-test.py -r odk1_src $paths
-            sudo python style-test.py -r shared_src $paths
+            sudo python style-test.py -d -r odk1_src
+            sudo python style-test.py -d -r shared_src
       - run:
           name: Build ODK1 Documentation
           command: make odk1
@@ -68,9 +67,8 @@ jobs:
       - run:
           name: Style Guide Check
           command: |
-            paths=$(git diff origin/master... --name-only)
-            sudo python style-test.py -r odk2_src $paths
-            sudo python style-test.py -r shared_src $paths
+            sudo python style-test.py -d -r odk2_src
+            sudo python style-test.py -d -r shared_src
       - run:
           name: Build ODK2 Documentation
           command: make odk2
