--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
             sudo apt-get install pngquant
             sudo apt-get install python-enchant
             sudo pip install -r requirements.txt
+      - run: 
+          name: STUPID
+          command: echo $(git diff origin/master... --name-only)
       - run:
           name: Style Guide Check
           command: |
@@ -66,6 +69,9 @@ jobs:
             sudo apt-get install pngquant
             sudo apt-get install python-enchant
             sudo pip install -r requirements.txt
+      - run: 
+          name: STUPID
+          command: echo $(git diff origin/master... --name-only)
       - run:
           name: Style Guide Check
           command: |
