--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run:
           name: Build PDF of ODK1 Documentation
           command: |
-            sphinx-build -b latex src odk1-build/latex
+            sphinx-build -b latex odk1-src odk1-build/latex
             sudo python util/resize.py odk1-build
       - run:
           name: Compress images
@@ -109,7 +109,7 @@ jobs:
       - run:
           name: Build PDF of ODK2 Documentation
           command: |
-            sphinx-build -b latex src odk2-build/latex
+            sphinx-build -b latex odk2-src odk2-build/latex
             sudo python util/resize.py odk2-build
       - run:
           name: Compress images
